--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,10 @@
-title: Jekyll Serial Programmer
+title: WTF? 
 markdown: kramdown
-url: ""
-baseurl: "/jekyll-theme-serial-programmer"
 
 # for atom feed
 author:
-  name: Sharad Raj Singh Maurya
-  email: dev_sharad@outlook.com
+  name: Duke 
+  email: duke@emersonalmeida.wtf 
 
 plugins:
   - jemoji
@@ -24,5 +22,5 @@ defaults:
       path: "_posts"
     values:
       layout: "post"
-      permalink: /posts/:title/
+      permalink: /:title/
 exclude: ["sitemap.xml", "feed.xml", "LICENSE", "README.md"]
